--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -56,7 +56,7 @@
 
 <body class='font-sans pt-17.5'>
 
-    <nav class='fixed top-0 w-full px-10 py-4.7 border-b border-black bg-white'>
+    <header class='fixed top-0 w-full px-10 py-4.7 border-b border-black bg-white'>
         <div class="flex justify-between items-center w-full mx-auto max-w-container">
             <div class='flex items-center space-x-8'>
                 <a class='max-w-logo flex items-center' href='https://www.thetransmitter.org/'>
@@ -68,17 +68,11 @@
                 </a>
             </div>
             <div class='flex items-center space-x-8'>
-                <ul class='flex items-center gap-8'>
-                    <li>
-                        <a id='map-link' class='text-sm font-bold text-navy uppercase {% if request.path == "/" %}active{% endif %} ' href="{% url 'index' %}">Map</a>
-                    </li>
-                    <li>
-                        <a id='list-link' class='text-sm font-bold text-navy uppercase {% if request.path == "/list/" %}active{% endif %}' href="{% url 'list_view' %}">List</a>
-                    </li>
-                    <li>
-                        <a class='text-sm font-bold text-navy uppercase {% if request.path == "/about/" %}active{% endif %}' href="{% url 'about' %}">About</a>
-                    </li>
-                </ul>
+                <nav class='flex items-center gap-8'>
+                    <a id='map-link' class='text-sm font-bold text-navy uppercase {% if request.path == "/" %}active{% endif %} ' href="{% url 'index' %}">Map</a>
+                    <a id='list-link' class='text-sm font-bold text-navy uppercase {% if request.path == "/list/" %}active{% endif %}' href="{% url 'list_view' %}">List</a>
+                    <a class='text-sm font-bold text-navy uppercase {% if request.path == "/about/" %}active{% endif %}' href="{% url 'about' %}">About</a>
+                </nav>
                 <form class='flex items-center w-62 border border-navy rounded-3.5 pl-1.5'>
                     <div class='flex items-center justify-center'>
                         {% svg 'icon-search' %}
@@ -89,7 +83,7 @@
                 </form>
             </div>
         </div>
-    </nav>
+    </header>
 
     <main class='px-10'>
         <div class="mx-auto max-w-container">
