TTWWW-467: updated search input text color to med-navy

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -84,7 +84,7 @@
                         {% svg 'icon-search' %}
                     </div>
                     <div class='flex-search'>
-                        <input id='search' class='w-full py-1.2 px-2 text-sm2 text-light-navy-3 font-bold uppercase placeholder-light-navy-3 rounded-3.5 outline-none' type='search' placeholder='Filter data by keyword' aria-label='Filter data by keyword'>
+                        <input id='search' class='w-full py-1.2 px-2 text-sm2 text-med-navy font-bold uppercase placeholder-light-navy-3 rounded-3.5 outline-none' type='search' placeholder='Filter data by keyword' aria-label='Filter data by keyword'>
                     </div>
                 </form>
             </div>
