--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -55,7 +55,7 @@
 </head>
 
 <body class='font-sans bg-tan' data-page='{% block page_name %}{% endblock %}'>
-    <header class='fixed top-0 w-full px-10 py-4.7 border-b border-black bg-white'>
+    <header class='px-10 py-4.7 border-b border-black bg-white'>
         <div class="flex justify-between items-center w-full mx-auto max-w-container">
             <div class='flex items-center space-x-8'>
                 <a class='max-w-logo flex items-center' href='https://www.thetransmitter.org/'>
@@ -84,7 +84,7 @@
         </div>
     </header>
 
-    <main class="h-[calc(100vh_-_4.5rem)] pt-3 pb-4">
+    <main class="h-[calc(100vh_-_4.5rem)] pt-3 pb-4 px-10">
         {% block body_block %} {% endblock %}
     </main>
 
