TTWWW-471: got rid of arbitrary tailwind classes

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -1,4 +1,4 @@
-<div class="h-[5.875rem]">
+<div class="h-filters">
     <!-- Keyword search and dropdown menu form
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div id="filter-list" class="card dropdown-keyword-search visible">
