TTWWW-469: re-added the server side logic for countries and continents

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -11,7 +11,7 @@
 
 <!-- Map div
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div id="map" class=""></div>
+<div id="map"></div>
 <!-- Timeline div
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="timeline-wrapper container-fluid">
