TTWWW-471: tailwind styling to remove arbitrary classes and adjust the tooltip styling, but unable to remove the 0.5px arbitrary class

--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/tailwind/tailwind.css
@@ -4,20 +4,20 @@
 
 @layer utilities {
   .tooltip {
-    @apply relative p-[0.4rem_0] text-[12px] opacity-100;
+    @apply relative pt-1.5 opacity-100;
   }
   .tooltip .arrow {
-    @apply absolute block w-[0.8rem] h-[0.5rem] border-transparent;
+    @apply absolute block w-arrow h-arrow border-transparent;
     top: -0.031rem;
   }
   .tooltip .arrow:before {
-    @apply absolute content-[''] bottom-0 z-[2] border-solid border-t-0 border-x-[0.4rem] border-b-[0.4rem] border-transparent border-b-light-gray;
+    @apply absolute content-empty bottom-0 z-2 border-solid border-t-0 border-x-1.5 border-b-1.5 border-transparent border-b-light-gray;
   }
   .tooltip .arrow:after {
-    @apply absolute content-[''] bottom-[0.5px] left-[-0.5px] w-[13px] h-[6.5px] z-[1] border-solid border-t-0 border-x-[0.4rem] border-b-[0.4rem] border-transparent border-b-med-gray;
+    @apply absolute content-empty bottom-[0.5px] left-[-0.5px] w-arrow2 h-arrow2 z-1 border-solid border-t-0 border-x-1.5 border-b-1.5 border-transparent border-b-med-gray;
   }
   .tooltip-inner {
-    @apply p-[0.6875rem_1rem] bg-[#F4F5F6] border border-[#BFCBD1] rounded-[4px] font-serif tracking-[0.04em] text-[#585248] max-w-[200px] text-center;
+    @apply py-2.5 px-6.5 bg-light-gray border border-light-gray2 rounded-1 font-serif text-sm0 text-dark-gray2 max-w-tooltip text-center;
   }
 }
 
