--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -63,21 +63,21 @@
                     <span class='sr-only'>The Transmitter</span>
                 </a>
                 <a class='flex items-center pt-2' href='#'>
-                    <span class='text-md1 text-med-navy uppercase leading-none'>Global Autism Prevalence</span>
+                    <span class='text-1md text-med-navy uppercase leading-none'>Global Autism Prevalence</span>
                 </a>
             </div>
             <div class='flex items-center space-x-8'>
                 <nav class='flex items-center gap-8'>
-                    <a id='map-link' class='text-sm font-bold text-navy uppercase {% if request.path == "/" %}active{% endif %} ' href="{% url 'index' %}">Map</a>
-                    <a id='list-link' class='text-sm font-bold text-navy uppercase {% if request.path == "/list/" %}active{% endif %}' href="{% url 'list_view' %}">List</a>
-                    <a class='text-sm font-bold text-navy uppercase {% if request.path == "/about/" %}active{% endif %}' href="{% url 'about' %}">About</a>
+                    <a id='map-link' class='text-2xs font-bold text-navy uppercase {% if request.path == "/" %}active{% endif %} ' href="{% url 'index' %}">Map</a>
+                    <a id='list-link' class='text-2xs font-bold text-navy uppercase {% if request.path == "/list/" %}active{% endif %}' href="{% url 'list_view' %}">List</a>
+                    <a class='text-2xs font-bold text-navy uppercase {% if request.path == "/about/" %}active{% endif %}' href="{% url 'about' %}">About</a>
                 </nav>
-                <form class='flex items-center w-search border border-navy rounded-3.5 pl-1.5'>
+                <form class='flex items-center w-search border border-navy rounded-lg pl-1.5'>
                     <div class='flex items-center justify-center'>
                         {% svg 'icon-search' %}
                     </div>
                     <div class='flex-search'>
-                        <input id='search' class='w-full py-1.2 px-2 text-sm2 text-med-navy font-bold uppercase placeholder-light-navy-3 rounded-3.5 outline-none' type='search' placeholder='Filter data by keyword' aria-label='Filter data by keyword'>
+                        <input id='search' class='w-full py-1.2 px-2 text-1xs2 text-med-navy font-bold uppercase placeholder-light-navy-3 rounded-lg outline-none' type='search' placeholder='Filter data by keyword' aria-label='Filter data by keyword'>
                     </div>
                 </form>
             </div>
