TTWWW-471: removed the X from the search input as this is a browser element that we have limited styling control over and removed the tooltip from the download button

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -74,6 +74,6 @@
     </div>
 
     <div>
-        <a role="button" id="download-link" class="inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase" href="#" data-toggle="tooltip" data-placement="top" title="Download data">Download Data</a>
+        <a role="button" id="download-link" class="inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase" href="#">Download Data</a>
     </div>
 </div>
