--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -37,7 +37,7 @@
             </div>
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="continent">Continent</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="continent">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="continent">
                     <option value="all">All</option>
                     <option value="Africa">Africa</option>
                     <option value="Asia">Asia</option>
@@ -49,25 +49,23 @@
             </div>
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="country">Country</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="country">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="country">
                     <option value="all">All</option>
                 </select>
             </div>
             
-            {% if template == "list" %}
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" for="min_year" id="earliest-label"></label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="min_year">
-                    <option value="">Any</option>
+                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="min_year" id="earliest-label">Earliest Year Published</label>
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="min_year">
+                    <option value="">All</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" for="max_year" id="latest-label"></label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="max_year">
-                    <option value="">Any</option>
+            <div class="relative border border-med-navy rounded-sm bg-light-gray">
+                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="max_year" id="latest-label">Latest Year Published</label>
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="max_year">
+                    <option value="">All</option>
                 </select>
             </div>
-            {% endif %}
 
             <button type="button" id="clear-filters" class="inline-block pt-2.5 pb-2.5 pl-5.5 pr-5.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase">Clear</button>
         </form>
