--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -124,6 +124,8 @@
     let timeline_type = '{{ timeline_type }}';
     let income = '{{ meanincome }}';
     let education = '{{ education }}';
+    let country = '{{ country }}';
+    let continent = '{{ continent }}';
     const world_atlas = "{% static 'autism_prevalence_map/vendor/data/110m.json' %}";
 </script>
 {% endblock %}
