TTWWW-471: updated map to be the correct fixed size, and added a mapwrap to control the overall page size

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -14,7 +14,9 @@
 
     <!-- Map div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div id='map' class='h-map'></div>
+    <div class='h-mapwrap'>
+        <div id='map' class='h-map w-map'></div>
+    </div>
     <!-- Timeline div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class='timeline-wrapper container-fluid h-timeline'>
