TTWWW-471: updated the filters to be fixed width

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -3,7 +3,7 @@
         <form class="flex flex-wrap gap-2">
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="studytype">Type of study</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="studytype">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filterwide rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="studytype">
                     <option value="">All</option>
                 </select>
             </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="samplesize">Sample size</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="samplesize">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="samplesize">
                     <option value="all">All</option>
                     <option value="low">&lt;10,000</option>
                     <option value="med">10,000-100,000</option>
@@ -37,7 +37,7 @@
             </div>
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="continent">Continent</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="continent">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="continent">
                     <option value="all">All</option>
                     <option value="Africa">Africa</option>
                     <option value="Asia">Asia</option>
@@ -49,20 +49,20 @@
             </div>
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="country">Country</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="country">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="country">
                     <option value="all">All</option>
                 </select>
             </div>
             
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="min_year" id="earliest-label">Earliest Year Published</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="min_year">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="min_year">
                     <option value="">All</option>
                 </select>
             </div>
             <div class="relative border border-med-navy rounded-sm bg-light-gray">
                 <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="max_year" id="latest-label">Latest Year Published</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 min-w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="max_year">
+                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="max_year">
                     <option value="">All</option>
                 </select>
             </div>
