TTWWW-471: lots of small edits addressing QA feedback

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -84,7 +84,7 @@
         </div>
     </header>
 
-    <main class='h-main pt-3 pb-4 px-10'>
+    <main class='pt-3 pb-4 px-10'>
         {% block body_block %} {% endblock %}
     </main>
 
