--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -14,9 +14,7 @@
 
     <!-- Map div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class='h-mapwrap'>
-        <div id='map' class='h-map w-map'></div>
-    </div>
+    <div id='map' class='h-map w-map lg:h-map-lg lg:w-map-lg xl:h-map-xl xl:w-map-xl'></div>
     <!-- Timeline div
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class='timeline-wrapper container-fluid h-timeline'>
