--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -1,77 +1,77 @@
-<div class="flex justify-between">
-    <div id="filter-list" class="max-w-207.5">
-        <form class="flex flex-wrap gap-2">
-            <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="studytype">Type of study</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filterwide rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="studytype">
-                    <option value="">All</option>
+<div class='flex justify-between mb-4'>
+    <div id='filter-list' class='max-w-207.5'>
+        <form class='flex flex-wrap gap-2'>
+            <div class='relative border border-med-navy rounded-sm bg-light-gray'>
+                <label class='absolute top-1.75 left-3.75 text-xs text-med-navy uppercase' for='studytype'>Type of study</label>
+                <select class='appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filterwide rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm' id='studytype'>
+                    <option value=''>All</option>
                 </select>
             </div>
-            <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="absolute top-0.5 left-14.5 text-xs text-med-navy uppercase" for="prevalence-slider">Prevalence (per 10,000)</label>
+            <div class='relative border border-med-navy rounded-sm bg-light-gray'>
+                <label class='absolute top-0.5 left-14.5 text-xs text-med-navy uppercase' for='prevalence-slider'>Prevalence (per 10,000)</label>
 
-                <div class="flex">
-                    <div class="relative">
-                        <label class="absolute top-1.75 left-3 text-xs text-med-navy uppercase" for="prevalence-min">Min</label>
-                        <input type="text" id="prevalence-min" class="w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-l text-2xs text-center text-med-navy">
+                <div class='flex'>
+                    <div class='relative'>
+                        <label class='absolute top-1.75 left-3 text-xs text-med-navy uppercase' for='prevalence-min'>Min</label>
+                        <input type='text' id='prevalence-min' class='w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-l text-2xs text-center text-med-navy'>
                     </div>
-                    <div class="relative w-63.5 pt-4.5 pb-4.5 pl-4 pr-4 border-l-0.5 border-r-0.5 border-med-navy">
-                        <div id="prevalence-slider"></div>
-                        <span class="absolute bottom-0.5 text-1xs text-med-navy uppercase">50</span>
-                        <span class="absolute bottom-0.5 right-3.75 text-1xs text-med-navy uppercase">150</span>
+                    <div class='relative w-63.5 pt-4.5 pb-4.5 pl-4 pr-4 border-l-0.5 border-r-0.5 border-med-navy'>
+                        <div id='prevalence-slider'></div>
+                        <span class='absolute bottom-0.5 text-1xs text-med-navy uppercase'>50</span>
+                        <span class='absolute bottom-0.5 right-3.75 text-1xs text-med-navy uppercase'>150</span>
                     </div>
-                    <div class="relative">
-                        <label class="absolute top-1.75 left-2.75 text-xs text-med-navy uppercase" for="prevalence-max">Max</label>
-                        <input type="text" id="prevalence-max" class="w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-r text-2xs text-center text-med-navy">
+                    <div class='relative'>
+                        <label class='absolute top-1.75 left-2.75 text-xs text-med-navy uppercase' for='prevalence-max'>Max</label>
+                        <input type='text' id='prevalence-max' class='w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-r text-2xs text-center text-med-navy'>
                     </div>
                 </div>
             </div>
-            <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="samplesize">Sample size</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="samplesize">
-                    <option value="all">All</option>
-                    <option value="low">&lt;10,000</option>
-                    <option value="med">10,000-100,000</option>
-                    <option value="high">&gt;100,000</option>
+            <div class='relative border border-med-navy rounded-sm bg-light-gray'>
+                <label class='absolute top-1.75 left-3.75 text-xs text-med-navy uppercase' for='samplesize'>Sample size</label>
+                <select class='appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm' id='samplesize'>
+                    <option value='all'>All</option>
+                    <option value='low'>&lt;10,000</option>
+                    <option value='med'>10,000-100,000</option>
+                    <option value='high'>&gt;100,000</option>
                 </select>
             </div>
-            <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="continent">Continent</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="continent">
-                    <option value="all">All</option>
-                    <option value="Africa">Africa</option>
-                    <option value="Asia">Asia</option>
-                    <option value="Europe">Europe</option>
-                    <option value="North America">North America</option>
-                    <option value="South America">South America</option>
-                    <option value="Oceania">Oceania</option>
+            <div class='relative border border-med-navy rounded-sm bg-light-gray'>
+                <label class='absolute top-1.75 left-3.75 text-xs text-med-navy uppercase' for='continent'>Continent</label>
+                <select class='appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm' id='continent'>
+                    <option value='all'>All</option>
+                    <option value='Africa'>Africa</option>
+                    <option value='Asia'>Asia</option>
+                    <option value='Europe'>Europe</option>
+                    <option value='North America'>North America</option>
+                    <option value='South America'>South America</option>
+                    <option value='Oceania'>Oceania</option>
                 </select>
             </div>
-            <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="country">Country</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="country">
-                    <option value="all">All</option>
+            <div class='relative border border-med-navy rounded-sm bg-light-gray'>
+                <label class='absolute top-1.75 left-3.75 text-xs text-med-navy uppercase' for='country'>Country</label>
+                <select class='appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm' id='country'>
+                    <option value='all'>All</option>
                 </select>
             </div>
             
-            <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="min_year" id="earliest-label">Earliest Year Published</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="min_year">
-                    <option value="">All</option>
+            <div class='relative border border-med-navy rounded-sm bg-light-gray'>
+                <label class='absolute top-1.75 left-3.75 text-xs text-med-navy uppercase' for='min_year' id='earliest-label'>Earliest Year Published</label>
+                <select class='appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm' id='min_year'>
+                    <option value=''>All</option>
                 </select>
             </div>
-            <div class="relative border border-med-navy rounded-sm bg-light-gray">
-                <label class="absolute top-1.75 left-3.75 text-xs text-med-navy uppercase" for="max_year" id="latest-label">Latest Year Published</label>
-                <select class="appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm" id="max_year">
-                    <option value="">All</option>
+            <div class='relative border border-med-navy rounded-sm bg-light-gray'>
+                <label class='absolute top-1.75 left-3.75 text-xs text-med-navy uppercase' for='max_year' id='latest-label'>Latest Year Published</label>
+                <select class='appearance-none pt-5.2 pr-8.5 pb-1.25 pl-3.75 w-filter rounded-sm bg-inherit text-2xs uppercase text-med-navy bg-select-arrow bg-no-repeat bg-right-4 bg-arrow-sm' id='max_year'>
+                    <option value=''>All</option>
                 </select>
             </div>
 
-            <button type="button" id="clear-filters" class="inline-block pt-2.5 pb-2.5 pl-5.5 pr-5.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase">Clear</button>
+            <button type='button' id='clear-filters' class='inline-block pt-2.5 pb-2.5 pl-5.5 pr-5.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase'>Clear</button>
         </form>
     </div>
 
     <div>
-        <a role="button" id="download-link" class="inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase" href="#">Download Data</a>
+        <a role='button' id='download-link' class='inline-block pt-2.5 pb-2.5 pl-6.5 pr-6.5 bg-med-navy rounded-sm text-sm font-bold text-white uppercase' href='#'>Download Data</a>
     </div>
 </div>
