--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -86,6 +86,7 @@
 
     <main class='pt-3 pb-4 px-10'>
         {% block body_block %} {% endblock %}
+        {% include 'autism_prevalence_map/mobile_popup.html' %}
     </main>
 
     {% block modal_block %} {% endblock %}
